--- a/app/views/introduction/footer.scala.html
+++ b/app/views/introduction/footer.scala.html
@@ -1,5 +1,5 @@
 @(name:String, link:String)
-<div class="credit">
+<div class="bs-credit">
     <div class="container">
     <h5><a href="@link">by @name</a></h5>
     </div>
