--- a/app/views/introduction/introduction.scala.html
+++ b/app/views/introduction/introduction.scala.html
@@ -1,8 +1,8 @@
 @base() {
-    <div class="navbar navbar-fixed-top intro-navbar-brand" role="navigation">
+    <div class="navbar navbar-fixed-top bs-intro-navbar-brand" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand intro-navbar-brand" href="@routes.Introduction.introduction()">BookStore</a>
+                <a class="navbar-brand bs-intro-navbar-brand" href="@routes.Introduction.introduction()">BookStore</a>
             </div>
         </div>
     </div>
