--- a/app/views/introduction/navbarHead.scala.html
+++ b/app/views/introduction/navbarHead.scala.html
@@ -1,4 +1,4 @@
 <div class="container">
     @signInButton()
-    <a class="navbar-text pull-right btn btn-md btn-primary intro-navbar-head-btn" href="@routes.Introduction.introduction()#sign-up" role="button">Sign up</a>
+    <a class="navbar-text pull-right btn btn-md btn-primary bs-intro-navbar-head-btn" href="@routes.Introduction.introduction()#sign-up" role="button">Sign up</a>
 </div>
