--- a/app/views/main/index.scala.html
+++ b/app/views/main/index.scala.html
@@ -6,9 +6,10 @@
 } {
     @*Search bar*@
     <div class="container">
-        <div class="row" style="text-align : center">
+        <div class="row col-xs-12 col-sm-8 col-md-8 col-sm-offset-2 col-md-offset-2 bs-searchbar-container" >
             @searchbar()
         </div>
+        <div class="clearfix"></div>
         @*Content*@
         <div class="row" style="margin-top: 20px;">
             @*Left sidebar filters*@
