--- a/app/views/main/navbar.scala.html
+++ b/app/views/main/navbar.scala.html
@@ -8,33 +8,85 @@
             <span class="icon-bar"></span>
         </button>
         <div class="navbar-header">
-            <a class="navbar-brand" href="@routes.BookStore.index()">BookStore</a>
+            <a class="navbar-brand" href="/">BookStore</a>
         </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li>                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
-                    <ul class="dropdown-menu navbar-dropdown-menu">
-                        <li><a href="#">Notify1</a></li>
-                        <li><a href="#">Notify2</a></li>
-                    </ul>
+        <div class="navbar-collapse collapse bs-navbar-collapse">
+            <!-- Normal Navbar  -->
+            <ul class="nav navbar-nav navbar-right visible-md visible-lg">
+                <li>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
+                    <div class="dropdown-menu dropdown-menu-right bs-navbar-dropdown-container">
+                        <div class="bs-navbar-wishlist-header">
+                            <h5>Notification</h5>
+                            <a class="" href="#"><i class="glyphicon glyphicon-cog"></i></a>
+                        </div>
+                        <div class="bs-navbar-wishlist-body">
+                            <a href="#">
+                                <img align="left" width="50" height="50" src="@routes.Assets.at("images/play-for-java.png")">
+                                <span><b>Play framework for java</b> - Some description: dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</span>
+                            </a>
+                            <a href="#">
+                                <img align="left" width="50" height="50" src="@routes.Assets.at("images/mongodb.png")">
+                                <span><b>MongoDB</b> - Some description: dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</span>
+                            </a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-heart"></i></a>
+                    <div class="dropdown-menu dropdown-menu-right bs-navbar-dropdown-container">
+                        <div class="bs-navbar-wishlist-header">
+                            <h5>WishList</h5>
+                            <a class="" href="#"><i class="glyphicon glyphicon-cog"></i></a>
+                        </div>
+                        <div class="bs-navbar-wishlist-body">
+                            <a href="#">
+                                <img align="left" width="50" height="50" src="@routes.Assets.at("images/play-for-java.png")">                                    <span><b>Play framework for java</b> - Some description: dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</span>
+                            </a>
+                            <a href="#">
+                                <img align="left" width="50" height="50" src="@routes.Assets.at("images/mongodb.png")">
+                                <span><b>MongoDB</b> - Some description: dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</span>
+                            </a>
+                        </div>
+                    </div>
                 </li>
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-shopping-cart"></i></a>
-                    <ul class="dropdown-menu navbar-dropdown-menu">
-                        <li><a href="#">Item1</a></li>
-                        <li><a href="#">Item2</a></li>
-                    </ul>
+                    <div class="dropdown-menu dropdown-menu-right bs-navbar-dropdown-container">
+                        <div class="bs-navbar-wishlist-header">
+                            <h5>Your Shopping Cart</h5>
+                            <a class="" href="#"><i class="glyphicon glyphicon-cog"></i></a>
+                        </div>
+                        <div class="bs-navbar-wishlist-body">
+                            <a href="#">
+                                <img align="left" width="50" height="50" src="@routes.Assets.at("images/play-for-java.png")">
+                                <span>Play framework for java</span>
+                            </a>
+                            <a href="#">
+                                <img align="left" width="50" height="50" src="@routes.Assets.at("images/mongodb.png")">
+                                <span>MongoDB</span>
+                            </a>
+                        </div>
+                    </div>
                 </li>
                 <li>
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Test@*@identity.firstName*@ <i class="fa fa-caret-down"></i></a>
-                    <ul class="dropdown-menu navbar-dropdown-menu">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">@*identity.firstname*@Varayut <i class="fa fa-caret-down"></i></a>
+                    <ul class="dropdown-menu bs-navbar-dropdown-menu">
                         <li><a href="#"><i class="fa fa-cog"></i> Setting</a></li>
-                        <li><a href="#"><i class="fa fa-star"></i> Watchlist</a> </li>
+                        <li><a href="#"><i class="fa fa-heart"></i> Watchlist</a> </li>
                         <li><a href="#"><i class="fa fa-clock-o"></i> History</a></li>
-                        <li><a href="@securesocial.controllers.routes.LoginPage.logout()"><i class="fa fa-sign-out"></i> Logout</a></li>
+                        <li><a href="/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
                     </ul>
                 </li>
+            </ul>
+            <!-- Navbar Collapsed -->
+            <ul class="nav navbar-nav navbar-right visible-xs visible-sm">
+                <li><a href="#"><i class="glyphicon glyphicon-bell"></i> Setting</a></li>
+                <li><a href="#"><i class="fa fa-cog"></i> Setting</a></li>
+                <li><a href="#"><i class="fa fa-heart"></i> Watchlist</a> </li>
+                <li><a href="#"><i class="glyphicon glyphicon-shopping-cart"></i> Setting</a></li>
+                <li><a href="#"><i class="fa fa-clock-o"></i> History</a></li>
+                <li><a href="/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
             </ul>
         </div>
     </div>
