--- a/app/views/main/sidebar.scala.html
+++ b/app/views/main/sidebar.scala.html
@@ -1,28 +1,94 @@
-<div class="col-xs-12 col-sm-2 col-md-2">
+<div class="col-xs-12 col-sm-2 col-md-2 hidden-xs bs-filter-side-container">
     <h5>Most Popular</h5>
     <ul class="list-unstyled">
-        <li><i class="fa fa-minus-square-o"></i> <a href="#"> Best seller of the Month</a></li>
-        <li><i class="fa fa-minus-square-o"></i> <a href="#"> Best seller of the Year</a></li>
+        <li class="checkbox">
+            <a>
+                <label>
+                    <input type="checkbox" value="">
+                    Best seller (Month)
+                </label>
+            </a>
+        </li>
+        <li class="checkbox">
+            <a>
+                <label>
+                    <input type="checkbox" value="">
+                    Best seller (Year)
+                </label>
+            </a>
+        </li>
     </ul>
     <h5>New Release</h5>
     <ul class="list-unstyled">
-        <li><i class="fa fa-minus-square-o"></i> <a href="#"> Last month</a></li>
-        <li><i class="fa fa-minus-square-o"></i> <a href="#"> Last 3 months</a></li>
-        <li><i class="fa fa-minus-square-o"></i> <a href="#"> Last 6 months</a></li>
+        <li class="checkbox">
+            <a>
+                <label>
+                    <input type="checkbox" value="">
+                    Last Month
+                </label>
+            </a>
+        </li>
+        <li class="checkbox">
+            <a>
+                <label>
+                    <input type="checkbox" value="">
+                    Last 3 months
+                </label>
+            </a>
+        </li>
+        <li class="checkbox">
+            <a>
+                <label>
+                    <input type="checkbox" value="">
+                    Last 6 months
+                </label>
+            </a>
+        </li>
     </ul>
-    <h5>Filters By</h5>
+    <h5>Rating</h5>
     <ul class="list-unstyled">
-        <li><i class="fa fa-minus-square-o"></i> <a href="#"> Language</a></li>
-        <li><i class="fa fa-minus-square-o"></i> <a href="#"> Star</a></li>
-        <li><i class="fa fa-minus-square-o"></i> <a href="#"> Shipping</a></li>
+        <li class="checkbox">
+            <a>
+                <label>
+                    <input type="checkbox" value="">
+                    </i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> & Up
+                </label>
+            </a>
+        </li>
+        <li class="checkbox">
+            <a>
+                <label>
+                    <input type="checkbox" value="">
+                    <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i> & Up
+                </label>
+            </a>
+        </li>
+        <li class="checkbox">
+            <a>
+                <label>
+                    <input type="checkbox" value="">
+                    <i class="fa fa-star"></i><i class="fa fa-star"></i> & Up
+                </label>
+            </a>
+        </li>
     </ul>
-    <h5>Mocup</h5>
+    <h5>Language</h5>
     <ul class="list-unstyled">
-        <li><i class="fa fa-minus-square-o"></i> <a href="#"> Lorem Ipsum</a></li>
-        <li><i class="fa fa-minus-square-o"></i> <a href="#"> Neque</a></li>
-        <li><i class="fa fa-minus-square-o"></i> <a href="#"> quisquam</a></li>
-        <li><i class="fa fa-minus-square-o"></i> <a href="#"> dolorem</a></li>
-        <li><i class="fa fa-minus-square-o"></i> <a href="#"> ipsum</a></li>
-        <li><i class="fa fa-minus-square-o"></i> <a href="#"> dolor</a></li>
+        <li class="checkbox">
+            <a>
+                <label>
+                    <input type="checkbox" value="">
+                    French
+                </label>
+            </a>
+        </li>
+        <li class="checkbox">
+            <a>
+                <label>
+                    <input type="checkbox" value="">
+                    Foreign
+                </label>
+            </a>
+        </li>
     </ul>
 </div>
