[Add] Get images from database (Binary form)

--- a/app/views/introduction/signUp.scala.html
+++ b/app/views/introduction/signUp.scala.html
@@ -3,7 +3,7 @@
 </div>
 <div class="bs-intro-container">
     <div class="bs-intro-wrapper">
-        <div class="signup-form-title">
+        <div class="bs-signup-form-title">
             <h1>Welcome to BookStore!</h1>
             <h4>Bookstore has various kinds of books available for you.</h4>
         </div>
