--- a/app/views/main/index.scala.html
+++ b/app/views/main/index.scala.html
@@ -1,5 +1,4 @@
 @*@(identity:securesocial.core.Identity)*@
-@(products: List[Product])
 @base("BookStore: Online shopping") {
     @*Navbar*@
     @*@navbar(identity)*@
@@ -16,7 +15,7 @@
             @*Left sidebar filters*@
             @sidebar()
             @*Book panel*@
-            @bookpanel(products)
+            @bookpanel()
         </div>
     </div>
 } {
