[Add] Setting page

--- a/app/views/main/navbar.scala.html
+++ b/app/views/main/navbar.scala.html
@@ -72,7 +72,7 @@
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">@*identity.firstname*@Varayut <i class="fa fa-caret-down"></i></a>
                     <ul class="dropdown-menu bs-navbar-dropdown-menu">
-                        <li><a href="#"><i class="fa fa-cog"></i> Setting</a></li>
+                        <li><a href="@routes.BookStore.setting()"><i class="fa fa-cog"></i> Setting</a></li>
                         <li><a href="#"><i class="fa fa-heart"></i> Watchlist</a> </li>
                         <li><a href="#"><i class="fa fa-clock-o"></i> History</a></li>
                         <li><a href="/logout"><i class="fa fa-sign-out"></i> Logout</a></li>
@@ -82,7 +82,7 @@
             <!-- Navbar Collapsed -->
             <ul class="nav navbar-nav navbar-right visible-xs visible-sm">
                 <li><a href="#"><i class="glyphicon glyphicon-bell"></i> Setting</a></li>
-                <li><a href="#"><i class="fa fa-cog"></i> Setting</a></li>
+                <li><a href="@routes.BookStore.setting()"><i class="fa fa-cog"></i> Setting</a></li>
                 <li><a href="#"><i class="fa fa-heart"></i> Watchlist</a> </li>
                 <li><a href="#"><i class="glyphicon glyphicon-shopping-cart"></i> Setting</a></li>
                 <li><a href="#"><i class="fa fa-clock-o"></i> History</a></li>
