--- a/app/views/book/addBook.scala.html
+++ b/app/views/book/addBook.scala.html
@@ -1,10 +1,73 @@
 @*@(identity:securesocial.core.Identity)*@
-@(book : Form[models.User]
+@(book : Form[models.Book])
 @layout{
-    <form role="form">
+    <h2>Add/Edit a new Book</h2>
+    <hr>
+    <form class="form-horizontal" role="form">
         <div class="form-group">
-            <label></label>
+            <label class="col-sm-2 control-label">Book name</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" placeholder="Book name">
+            </div>
         </div>
-
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Type</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" placeholder="Type of product, Book">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Description</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" placeholder="Description">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Company</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" placeholder="Company name">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Price</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" placeholder="Price">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Image</label>
+            <div class="col-sm-10">
+                <input type="file" class="form-control" accept="image/*">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Rating</label>
+            <div class="col-sm-10">
+                <input type="number" class="form-control" placeholder="Rating between 1 to 5" min="1" max="5">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Author</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" placeholder="Name and surname">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Publication date</label>
+            <div class="col-sm-10">
+                <input type="date" class="form-control">
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 control-label">Page number</label>
+            <div class="col-sm-10">
+                <input type="number" class="form-control" placeholder="Page number">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </div>
     </form>
 }
