[Add] Listing books

--- a/app/views/book/addBook.scala.html
+++ b/app/views/book/addBook.scala.html
@@ -3,7 +3,7 @@
 @layout{
     <h2>Add/Edit a new Book</h2>
     <hr>
-    <form class="form-horizontal" role="form">
+    <form class="form-horizontal" role="form" action="">
         <div class="form-group">
             <label class="col-sm-2 control-label">Book name</label>
             <div class="col-sm-10">
