--- a/app/views/book/upsertBook.scala.html
+++ b/app/views/book/upsertBook.scala.html
@@ -1,37 +1,37 @@
 @*@(identity:securesocial.core.Identity)*@
-@(book : Form[models.Book])
+@(bookForm : Form[models.Book])
 @layout{
     <h2>Add/Edit a new Book</h2>
     <hr>
-    <form class="form-horizontal" role="form" action="">
+    <form class="form-horizontal" role="form" action="@routes.BookStore.handleUpdateBook()" method="POST">
         <div class="form-group">
             <label class="col-sm-2 control-label">Book name</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Book name">
+                <input type="text" class="form-control" placeholder="Book name" value='@bookForm("name").value'>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Type</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Type of product, Book">
+                <input type="text" class="form-control" placeholder="Type of product, Book" value='@bookForm("type").value'>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Description</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Description">
+                <textarea type="text" class="form-control" placeholder="Description">@bookForm("description").value</textarea>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Company</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Company name">
+                <input type="text" class="form-control" placeholder="Company name" value='@bookForm("company").value'>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Price</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Price">
+                <input type="text" class="form-control" placeholder="Price" value='@bookForm("price").value'>
             </div>
         </div>
         <div class="form-group">
@@ -43,25 +43,25 @@
         <div class="form-group">
             <label class="col-sm-2 control-label">Rating</label>
             <div class="col-sm-10">
-                <input type="number" class="form-control" placeholder="Rating between 1 to 5" min="1" max="5">
+                <input type="number" class="form-control" placeholder="Rating between 1 to 5" min="1" max="5" step="0.5" value='@bookForm("rating").value'>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Author</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Name and surname">
+                <input type="text" class="form-control" placeholder="Name and surname" value='@bookForm("author").value'>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Publication date</label>
             <div class="col-sm-10">
-                <input type="date" class="form-control">
+                <input type="date" class="form-control" value='@bookForm("publicationDate").value'>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Page number</label>
             <div class="col-sm-10">
-                <input type="number" class="form-control" placeholder="Page number">
+                <input type="number" class="form-control" placeholder="Page number" value='@bookForm("numPage").value'>
             </div>
         </div>
         <div class="form-group">
