--- a/app/views/book/upsertBook.scala.html
+++ b/app/views/book/upsertBook.scala.html
@@ -1,73 +1,78 @@
 @*@(identity:securesocial.core.Identity)*@
 @(bookForm : Form[models.Book])
 @layout{
-    <h2>Add/Edit a new Book</h2>
+    <h2>Add/Edit/Delete the Book</h2>
     <hr>
     <form class="form-horizontal" role="form" action="@routes.BookStore.handleUpdateBook()" method="POST">
         <div class="form-group">
             <label class="col-sm-2 control-label">Book name</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Book name" value='@bookForm("name").value'>
+                <input type="text" name="name" class="form-control" placeholder="Book name" value='@bookForm("name").value'>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Type</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Type of product, Book" value='@bookForm("type").value'>
+                <input type="text" name="type" class="form-control" placeholder="Type of product, Book" value='@bookForm("type").value'>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Description</label>
             <div class="col-sm-10">
-                <textarea type="text" class="form-control" placeholder="Description">@bookForm("description").value</textarea>
+                <textarea type="text" name="description" class="form-control" placeholder="Description">@bookForm("description").value</textarea>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Company</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Company name" value='@bookForm("company").value'>
+                <input type="text" name="company" class="form-control" placeholder="Company name" value='@bookForm("company").value'>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Price</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Price" value='@bookForm("price").value'>
+                <input type="number" name="price" class="form-control" placeholder="Price" value='@bookForm("price").value'>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Image</label>
             <div class="col-sm-10">
-                <input type="file" class="form-control" accept="image/*">
+                <input type="file" name="imagePath" class="form-control" accept="image/*">
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Rating</label>
             <div class="col-sm-10">
-                <input type="number" class="form-control" placeholder="Rating between 1 to 5" min="1" max="5" step="0.5" value='@bookForm("rating").value'>
+                <input type="number" name="rating" class="form-control" placeholder="Rating between 1 to 5" min="1" max="5" step="0.5" value='@bookForm("rating").value'>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Author</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" placeholder="Name and surname" value='@bookForm("author").value'>
+                <input type="text" name="author" class="form-control" placeholder="Name and surname" value='@bookForm("author").value'>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Publication date</label>
             <div class="col-sm-10">
-                <input type="date" class="form-control" value='@bookForm("publicationDate").value'>
+                <input type="date" name="publicationDate" class="form-control" value='@bookForm("publicationDate").value'>
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Page number</label>
             <div class="col-sm-10">
-                <input type="number" class="form-control" placeholder="Page number" value='@bookForm("numPage").value'>
+                <input type="number" name="numPage" class="form-control" placeholder="Page number" value='@bookForm("numPage").value'>
             </div>
         </div>
         <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
+            <div class="col-sm-offset-2" style="display:inline-block; padding-left: 15px;">
                 <button type="submit" class="btn btn-primary">Submit</button>
             </div>
+            @if(bookForm("name").value != null){
+                <a class="btn btn-danger" href='@routes.BookStore.deleteBook(bookForm("name").value)'>Delete</a>
+            }
         </div>
+
+
     </form>
 }
