--- a/app/views/main/setting.scala.html
+++ b/app/views/main/setting.scala.html
@@ -21,6 +21,7 @@
    <ul id="myTab" class="nav nav-tabs">
        <li class="active"><a href="#home" data-toggle="tab">Home</a></li>
        <li><a href="#adresses" data-toggle="tab">Adresses</a></li>
+       <li><a href="#password" data-toggle="tab">Password</a></li>
    </ul>
    <div id="myTabContent" class="tab-content">
    <br>
@@ -37,7 +38,6 @@
             @flash.get("success")
         </p>
     }
-
     <div class="form-group">
         <label class="col-sm-2 control-label">Firstname</label>
         <div class="col-sm-10">
@@ -59,7 +59,7 @@
     <div class="form-group">
         <label class="col-sm-2 control-label">Password</label>
         <div class="col-sm-10">
-            <input type="text" name="text" class="form-control" placeholder="Password" value="@form("pwd").value">
+            <input type="password" name="password" class="form-control" placeholder="Password" value="@form("pwd.password").value">
         </div>
     </div>
     <div class="form-group">
@@ -80,10 +80,13 @@
         </div>
     </div>
 }
-        </div>
-    <div class="tab-pane fade" id="adresses">
-    <p>2</p>
     </div>
+
+       @*adresses*@
+       @adresses()
+       @*password*@
+       @password()
+
 </div>
 </div>
 </div>
