[Add]Setting, address

--- a/app/views/main/setting.scala.html
+++ b/app/views/main/setting.scala.html
@@ -81,9 +81,7 @@
     </div>
 }
         </div>
-    <div class="tab-pane fade" id="adresses">
-    <p>2</p>
-    </div>
+    @address(form)
 </div>
 </div>
 </div>
