--- a/app/views/main/bookpanel.scala.html
+++ b/app/views/main/bookpanel.scala.html
@@ -1,9 +1,9 @@
 <div class="col-xs-12 col-sm-10 col-md-10 bs-book-container">
     <div class="col-sm-6 col-md-3" ng-repeat="product in products">
-        <a href="#">
+        <a href="description/{{ product.name }}">
             <div class="thumbnail">
 
-                <a href="description">
+
 
                 <img class="img-responsive" ng-src="getImage/{{product.imageName}}">
                 <div class="caption">
@@ -14,7 +14,7 @@
                     <small class="bs-price"><i class="glyphicon glyphicon-euro"></i>{{ product.price | number : 2 }}</small>
                 </div>
 
-                </a>
+
 
             </div>
         </a>
