--- a/app/views/main/description.scala.html
+++ b/app/views/main/description.scala.html
@@ -1,9 +1,9 @@
-@base("order") {
+@(product: Book)
+@base("description") {
 @*Navbar*@
 @*@navbar(identity)*@
 @navbar()
 } {
-
 <!-- Start main container-->
 <main class="container">
     <!-- Search bar -->
@@ -12,7 +12,34 @@
         @searchbar()
     </div>
     <!-- After Search bar -->
+    <!-- After Search bar -->
     <div class="row bs-detail-container" style="margin-top: 20px;">
+        <div class="col-xs-12 col-sm-4 col-md-4">
+            <img src="@product.getImagePath()">
+        </div>
+        <div class="col-xs-12 col-sm-8 col-md-8">
+            <h3>@product.getName()</h3>
+            <small>@product.getAuthor()</small>
+            <div><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></div>
+            <detail>
+                @product.getImagePath()
+                @product.getDescription()
+            </detail>
+            <hr>
+            <div class="col-xs-12 col-sm-6 col-md-6 bs-detail-char">
+                <h4>Paper back</h4>
+                <!--<h4>Normal price: <del><i class="glyphicon glyphicon-euro"></i> 50</del></h4>
+                <h4 style="color: red">Special price: <i class="glyphicon glyphicon-euro"></i> 30 (save 60%)</h4>-->
+                <h4>Price: <i class="glyphicon glyphicon-euro"></i> @product.getPrice()</h4>
+                <button class="btn btn-success">Add to cart</button>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6">
+                <p>Free shipping for exclusive membership <a href="#">details</a></p>
+                <p>Free gift wrapping <a href="#">details</a></p>
+            </div>
+        </div>
+    </div>
+    <!--<div class="row bs-detail-container" style="margin-top: 20px;">
         <div class="col-xs-12 col-sm-4 col-md-4">
             <img src="images/play-for-java.png">
         </div>
@@ -35,7 +62,7 @@
                 <p>Free gift wrapping <a href="#">details</a></p>
             </div>
         </div>
-    </div>
+    </div>-->
     <hr>
     <div class="row bs-recommendation-container visible-md visible-lg">
         <h4>Book recommendations, frequently brought together</h4>
