--- a/app/views/main/setting.scala.html
+++ b/app/views/main/setting.scala.html
@@ -38,6 +38,30 @@
             @flash.get("success")
         </p>
     }
+       @if(form("provider").value.equals("google")){
+       <div class="form-group">
+           <label class="col-sm-2 control-label">Provider</label>
+           <div class="col-sm-10">
+               <img src="/assets/securesocial/images/providers/google.png"></img>
+           </div>
+       </div>
+       }
+       @if(form("provider").value.equals("facebook")){
+       <div class="form-group">
+           <label class="col-sm-2 control-label">Provider</label>
+           <div class="col-sm-10">
+               <img src="/assets/securesocial/images/providers/facebook.png"></img>
+           </div>
+       </div>
+       }
+       @if(form("provider").value.equals("twitter")){
+       <div class="form-group">
+           <label class="col-sm-2 control-label">Provider</label>
+           <div class="col-sm-10">
+               <img src="/assets/securesocial/images/providers/twitter.png"></img>
+           </div>
+       </div>
+       }
     <div class="form-group">
         <label class="col-sm-2 control-label">Firstname</label>
         <div class="col-sm-10">
