--- a/app/views/main/setting.scala.html
+++ b/app/views/main/setting.scala.html
@@ -20,7 +20,7 @@
 <div class="bs-docs-example">
    <ul id="myTab" class="nav nav-tabs">
        <li class="active"><a href="#home" data-toggle="tab">Home</a></li>
-       <li><a href="#adresses" data-toggle="tab">Adresses</a></li>
+       <li><a href="#addresses" data-toggle="tab">Addresses</a></li>
    </ul>
    <div id="myTabContent" class="tab-content">
    <br>
