--- a/app/views/main/address.scala.html
+++ b/app/views/main/address.scala.html
@@ -1,11 +1,14 @@
 @(userForm : Form[models.User])
-<div class="tab-pane fade" id="adresses">
+<div class="tab-pane fade" id="addresses">
+    @*@for(address <- user.getAddresses()){
+        <h5>@address.getCity()</h5>
+    }*@
     <form class="form-horizontal" action="" method="POST">
-        @helper.repeat(userForm("addresses"), min = 1) { addressField => 
+        @helper.repeat(userForm("addresses"), min = 1) { addressField =>
             <div class="form-group" >
                 <label class="col-sm-2 control-label">Street</label>
                 <div class="col-sm-7">
-                    <input name="street" class="form-control" type="text"  placeholder="Street" value='@userForm("addresses")'>
+                    <input name="street" class="form-control" type="text"  placeholder="Street" name='@userForm(addressField.name.toString + ".street")' value=''>
                 </div>
             </div>         
             <div class="form-group" >
@@ -32,9 +35,8 @@
                 <a class="btn btn-success" href="#" ng-click="">Add</a>
             </div>
             <div style="display:inline-block;">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary">Save</button>
             </div>
         </div>
-
     </form>
 </div>
